Service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    argocd.argoproj.io/tracking-id: myapp:/Service:default/test-argocd
  name: test-argocd
  namespace: default
spec:
  ports:
    - nodePort: 30007
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: webapp
  type: NodePort
