service.yml
apiVersion: v1
kind: Service
metadata:
 name: test-argocd
spec:
 type: NodePort
 selector:
   app: webapp
 ports:
 - nodePort: 30007
   protocol: TCP
   port: 80
   targetPort: 80
